# co_mindustry

./: .gitignore  CMakeLists.txt  CMakeSettings.json  alpha.tscn  alpha_unit.tscn  bullet.gd  bullet.tscn  camera.gd  camera.tscn  conveyer_belt.gd  conveyer_belt.tscn  conveyor_belt.gd  conveyor_belt.tscn  copper.tscn  desert.gd  desert.tscn  drag_preview.gd  drag_preview.tscn  game_layer.gd  game_layer.tscn  hud.tscn  icon.svg.import  item.gd  item.tscn  main.gd  main.tscn  player.gd  player.tscn  poly.tscn  poly_unit.tscn  project.godot  test_ground.tscn  unit.gd  unit.tscn  unit_template.gd  unit_template.tscn  vcpkg.json
assets/belts/: conveyor-0-0.png.import  conveyor-0-1.png.import  conveyor-0-2.png.import  conveyor-0-3.png.import
assets/icons/: crafting.png.import  defense.png.import  distribution.png.import  effect.png.import  liquid.png.import  logic.png.import  power.png.import  production.png.import  turret.png.import  units.png.import
assets/items/: copper.png.import  graphite.png.import
assets/musics/: boss1.ogg.import  boss2.ogg.import  editor.ogg.import  fine.ogg.import  game1.ogg.import  game2.ogg.import  game3.ogg.import  game4.ogg.import  game5.ogg.import  game6.ogg.import  game7.ogg.import  game8.ogg.import  game9.ogg.import  land.ogg.import  launch.ogg.import  menu.ogg.import
assets/particles/: particle.png.import
assets/sounds/: AlliedGunfire.wav.import  EnemyGunfire.wav.import  artillery.ogg.import  bang.ogg.import  beam.ogg.import  bigshot.ogg.import  bioLoop.ogg.import  blaster.ogg.import  bolt.ogg.import  boom.ogg.import  break.ogg.import  build.ogg.import  buttonClick.ogg.import  cannon.ogg.import  click.ogg.import  combustion.ogg.import  conveyor.ogg.import  corexplode.ogg.import  cutter.ogg.import  door.ogg.import  drill.ogg.import  drillCharge.ogg.import  drillImpact.ogg.import  dullExplosion.ogg.import  electricHum.ogg.import  explosion.ogg.import  explosionbig.ogg.import  extractLoop.ogg.import  fire.ogg.import  flame.ogg.import  flame2.ogg.import  flux.ogg.import  glow.ogg.import  grinding.ogg.import  hum.ogg.import  largeCannon.ogg.import  largeExplosion.ogg.import  laser.ogg.import  laserbeam.ogg.import  laserbig.ogg.import  (+56 more)
assets/sounds/ui/: back.ogg.import  chatMessage.ogg.import  message.ogg.import  press.ogg.import  unlock.ogg.import
assets/spritesheets/: Explosion.png.import  Red Effect Bullet Impact Explosion 32x32.png.import  drills.png.import  environment.png.import  tilesheet_complete.png.import  units.png.import
assets/tilesheets/: environment.png.import  tilesheet_complete.png.import
assets/units/: poly.png.import
co_mindustry/: CMakeLists.txt  main.cpp
co_mindustry/assets-raw/map/: blocks.json  map.json
co_mindustry/headers/: Game.h  GameObject.h  Map.h  TextureManager.h  Unit.h
co_mindustry/headers/components/: AnimationComponent.h  CameraComponent.h  InputComponent.h  MapComponent.h  MovementComponent.h  PhysicComponent.h  SpriteComponent.h
co_mindustry/headers/systems/: DrawSystem.h  InputSystem.h
co_mindustry/headers/utils/: vector2d.h
co_mindustry/src/: Game.cpp  GameObject.cpp  Map.cpp  TextureManager.cpp  Unit.cpp
co_mindustry/src/systems/: DrawSystems.cpp  InputSystem.cpp
documents/: mindustry.drawio.html  todo.md
hud/: BuildingsPanel.gd  hud.tscn
tilesets/: environment.tres  tile_map.tres
